--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -21,6 +21,8 @@
 }
 
 .modal__container {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1, 1);
   width: 700px;
   background: white;
   color: #333;
